# llama.cpp-agent

./: .gitignore  .gitmodules  CMakeLists.txt
.qoder/repowiki/zh/content/: 开发者指南.md  快速开始.md  技能管理系统.md  权限控制系统.md
.qoder/repowiki/zh/content/HTTP 服务器和 API/: HTTP 服务器和 API.md  代理会话管理.md  代理工具发现.md  代理权限控制.md  健康检查和监控.md  聊天补全 API.md  音频服务 API.md
.qoder/repowiki/zh/content/MCP 协议支持/: MCP 协议支持.md  MCP 客户端实现.md  MCP 工具包装器.md  MCP 服务器管理.md
.qoder/repowiki/zh/content/代理核心系统/: 事件流式传输.md  代理循环核心.md  代理核心系统.md  会话管理.md  统计监控.md
.qoder/repowiki/zh/content/多语言 SDK/: Go SDK.md  Java SDK.md  Python SDK.md  Rust SDK.md  TypeScript SDK.md  多语言 SDK.md
.qoder/repowiki/zh/content/子代理系统/: 子代理执行器.md  子代理显示系统.md  子代理类型定义.md  子代理系统.md  子代理输出处理.md
.qoder/repowiki/zh/content/工具系统/: 任务管理工具.md  命令执行工具.md  工具注册和执行机制.md  工具系统.md  文件操作工具.md  自定义工具开发指南.md
.qoder/repowiki/zh/content/开发者指南/: Stable Diffusion 推理开发指南.md  开发者指南.md
.qoder/repowiki/zh/content/核心架构设计/: 代理核心系统.md  子代理系统.md  工具注册系统.md  技能管理系统.md  权限控制系统.md  核心架构设计.md
.qoder/repowiki/zh/content/第三方集成/: ASR_TTS 语音处理集成.md  MiniMemory 集成.md  Omni多模态推理指南.md  ggml扩展研究.md  模型和硬件加速.md  第三方集成.md
.qoder/repowiki/zh/content/部署和运维/: 性能优化.md  故障排除和常见问题.md  监控和日志.md  部署和运维.md  部署配置.md
.qoder/repowiki/zh/content/项目概述/: 快速开始.md  技术栈概览.md  项目介绍.md  项目概述.md
.qoder/repowiki/zh/content/项目概述/架构设计概览/: 分层架构设计.md  扩展机制设计.md  架构设计概览.md  组件交互关系.md  设计模式应用.md
.qoder/repowiki/zh/content/项目概述/核心功能特性/: 子代理架构.md  技能管理系统.md  本地大语言模型推理引擎.md  权限控制系统.md  核心功能特性.md
.qoder/repowiki/zh/content/项目概述/核心功能特性/工具执行系统/: 任务管理工具.md  命令执行工具.md  工具执行系统.md  工具注册机制.md  文件操作工具.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
SDKs/go/: go.mod
SDKs/go/llamaagentsdk/: sdk.go
SDKs/java/: .project  pom.xml
SDKs/java/src/main/java/ai/llama/agent/sdk/: HttpAgentConfig.java  HttpAgentSession.java  HttpServerConfig.java  StreamResult.java
SDKs/python/: pyproject.toml
SDKs/python/src/llama_agent_sdk/: __init__.py  sdk.py
SDKs/rust/: Cargo.toml
SDKs/rust/src/: lib.rs
SDKs/typescript/: package.json  tsconfig.json
SDKs/typescript/src/: index.ts  minimemory.ts  project-assistant.ts
agent/: CMakeLists.txt  agent-loop.cpp  agent-loop.h  agent.cpp  permission-async.cpp  permission-async.h  permission.cpp  permission.h  prompt.txt  tool-registry.cpp  tool-registry.h
agent/agents-md/: agents-md-manager.cpp  agents-md-manager.h
agent/mcp/: mcp-client.cpp  mcp-client.h  mcp-server-manager.cpp  mcp-server-manager.h  mcp-tool-wrapper.cpp  mcp-tool-wrapper.h
agent/sdk/: SDK.md  http-agent.cpp  http-agent.h  mcp-manager.cpp  mcp-manager.h  prompt-builder.cpp  prompt-builder.h  sdk-cli.cpp  sdk-types.h  tool-task-sdk.cpp
agent/server/: agent-routes.cpp  agent-routes.h  agent-server.cpp  agent-session.cpp  agent-session.h
agent/skills/: skills-manager.cpp  skills-manager.h
agent/subagent/: subagent-display.cpp  subagent-display.h  subagent-output.cpp  subagent-output.h  subagent-runner.cpp  subagent-runner.h  subagent-types.cpp  subagent-types.h
agent/tools/: tool-bash.cpp  tool-edit.cpp  tool-glob.cpp  tool-read.cpp  tool-task.cpp  tool-write.cpp
docs/: ggml-analysis.md  ggml的扩展.md  llama-cpp-new-model-support.md  llama-cpp-parallel-request.md  llama-cpp-usage-guide.md  llama-quant.cpp文件分析.md  omni-multimodal-inference-guide.md  qwen3-omni-ggml-inference-guide.md  sd-inference-development-guide.md
