cmake_minimum_required(VERSION 3.20)
project("llama.cpp-agent" C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(LLAMA_BUILD_COMMON ON CACHE BOOL "" FORCE)
set(LLAMA_BUILD_TOOLS ON CACHE BOOL "" FORCE)
set(LLAMA_BUILD_SERVER ON CACHE BOOL "" FORCE)
set(LLAMA_HTTPLIB ON CACHE BOOL "" FORCE)

option(LLAMA_CPP_AGENT_CUDA "Enable CUDA backend when building llama.cpp-agent" OFF)
if(DEFINED LOCAL_AI_RUNTIME_LLAMA_CUDA AND LOCAL_AI_RUNTIME_LLAMA_CUDA)
  set(LLAMA_CPP_AGENT_CUDA ON CACHE BOOL "" FORCE)
endif()
if(LLAMA_CPP_AGENT_CUDA)
  set(GGML_CUDA ON CACHE BOOL "" FORCE)
endif()

set(LLAMA_CPP_SOURCE_DIR_OVERRIDE "" CACHE PATH "Override llama.cpp source dir for llama.cpp-agent")
if(NOT LLAMA_CPP_SOURCE_DIR_OVERRIDE STREQUAL "" AND EXISTS "${LLAMA_CPP_SOURCE_DIR_OVERRIDE}/CMakeLists.txt")
  set(LLAMA_CPP_SOURCE_DIR "${LLAMA_CPP_SOURCE_DIR_OVERRIDE}")
  set(LLAMA_CPP_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/third_party/llama.cpp")
  add_subdirectory("${LLAMA_CPP_SOURCE_DIR}" "${LLAMA_CPP_BINARY_DIR}")
else()
  set(LLAMA_CPP_SOURCE_DIR "${CMAKE_CURRENT_LIST_DIR}/third_party/llama.cpp")
  set(LLAMA_CPP_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/third_party/llama.cpp")
  add_subdirectory(third_party/llama.cpp)
endif()

set(LLAMA_CPP_SOURCE_DIR "${LLAMA_CPP_SOURCE_DIR}" CACHE INTERNAL "llama.cpp source dir in use")
set(LLAMA_CPP_BINARY_DIR "${LLAMA_CPP_BINARY_DIR}" CACHE INTERNAL "llama.cpp binary dir in use")
add_subdirectory(agent)
