[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-agent-sdk"
version = "0.1.0"
description = "Minimal Python SDK base for llama-agent-server / llama-server (OpenAI-compatible HTTP)."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
